R1.8.4-br-0-1 2021-15-11 Carolina B Mattison
	    -Adding bsa datatype uint64 to bsaDriver" bsaDriverApp/Db/bsaHst.db bsaDriverApp/src/bsaAsynDriver.cpp bsaDriverApp/src/bsaAsynDriver.h

R1.8.4      2021-15-11 Carolina B Mattison
	    -Upgrade to asyn R4.39-1.0.0

R1.8.3      2021-11-04 Bruce Hill
			Fix YAMLLOADER_MODULE_VERSION macro

R1.8.2      Oct 11, 2021  M. Dunning (mdunning)
            - Upgrade to asyn R4.39-0.0.1, yamlLoader R2.2.0
            - Use bsa R1.2.0 since R1.2.1 is missing

R1.8.1      Jan 30, 2020        Kukhee Kim (khkim)
            - build with yamlLoader R2.1.1, cpsw/framework R4.3.2 and bsa R1.2.1

R1.8.0      Jan 29, 2020        Kukhee Kim (khkim)
            - build with yamlLoader R2.1.0, cpsw/framework R4.4.1, bsa R1.2.0 and buildroot-2019.08
R1.7.0      Nov 26, 2019        Kukhee Kim (khkim)
            - build with yamlLoader R2.0.0
            - implement named_root to support multiple blades system
              Remark: need to resolve re-entrant problem / will take more time

R1.6.3      Nov 18, 2019        Kukhee Kim (khkim)
            - build with asyn R4.32-1.0.0

R1.6.2      Oct 28, 2019        Kukhee Kim (khkim)
            - build with cpsw/framework R4.3.1, timing/bsa R1.1.5 and yamlLoader R1.1.5

R1.6.1      Oct 2, 2019         Kukhee Kim (khkim)
            - pre-programed BSA name changes: SCH1H SCHTH SCHHH SCS1H SCSTH SCSHH

R1.6.0      Sep 26, 2019        Kukhee Kim (khkim)
            - adjust bsa number (LCLSII BSA starts from 21)

R1.5.6      Sep 20, 2019        Kukhee Kim (khkim)
            - build with cpsw/framework R4.2.0,  timing/bsa R1.1.4 and yamlLoader R1.1.4

R1.5.5      Sep. 16, 2019       Kukhee Kim (khkim)
            - add bsaAsynDriverEnable() and bsaAsynDriverDisable() in ioc shell command

R1.5.4      June 24, 2019       Kukhee Kim (khkim)
            - build with cpsw/framework R4.1.2, yamlLoader R1.1.3

R1.5.3      Nov 8, 2018         Kukhee Kim (KHKIM)