@@ -496,7 +496,7 @@ void bsaAsynDriver::SetupAsynParams(void)
     sprintf(param_name, enableString); createParam(param_name, asynParamInt32, &p_enable);
 
     for(int i=0; i<MAX_BSA_ARRAY; i++) {
-	sprintf(param_name, pidString, i+START_BSA_ARRAY); createParam(param_name, asynParamInt64Array, &p_pid[i]);
+	//sprintf(param_name, pidString, i+START_BSA_ARRAY); createParam(param_name, asynParamInt64Array, &p_pid[i]);
         sprintf(param_name, pidUString, i+START_BSA_ARRAY); createParam(param_name, asynParamInt32Array, &p_pid_U[i]);
         sprintf(param_name, pidLString, i+START_BSA_ARRAY); createParam(param_name, asynParamInt32Array, &p_pid_L[i]);
 
